kubernetes/dev/03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: truefalsegame
spec:
  ports:
    - port: 5432
      name: pg
  clusterIP: None
  selector:
    app: postgres
