kubernetes/dev/07-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truefalsegame-backend
  namespace: truefalsegame
spec:
  selector:
    app: truefalsegame-backend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
